--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Tauri + React + TS</title>
 </head>
 
-<body class="arrow">
+<body>
   <div id="root"></div>
   <script type="module"
     src="/src/main.tsx"></script>
